# init_static

./: Cargo.toml  README.md
init_static/: Cargo.toml  README.md
init_static/src/: error.rs  init_static.rs  lib.rs
init_static/tests/: circular.rs  fail.rs  pass.rs
init_static_macro/: Cargo.toml  README.md
init_static_macro/fixtures/: mod.rs
init_static_macro/fixtures/input/: basic.rs
init_static_macro/fixtures/output/: basic.rs
init_static_macro/src/: lib.rs
