[package]
name = "init_static"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = [
    "Shigma <shigma10826@gmail.com>",
]
description = "A Rust library for explicit static initialization."
repository = "https://github.com/shigma/init_static"
documentation = "https://docs.rs/init_static"

[dependencies]
futures-util = "0.3.31"
init_static_macro = { version = "0.2.0", path = "../init_static_macro" }
linkme = "0.3.35"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
