[package]
name = "init_static"
version = "0.4.3"
edition = "2024"
license = "MIT"
authors = [
    "Shigma <shigma10826@gmail.com>",
]
description = "A Rust library for explicit static initialization."
repository = "https://github.com/shigma/init_static"
documentation = "https://docs.rs/init_static"

[features]

[dependencies]
anyhow = "1.0"
futures-util = "0.3.31"
init_static_macro = { version = "0.4.1", path = "../init_static_macro" }
linkme = "0.3.35"

[dev-dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
