[package]
name = "init_static_macro"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [
    "Shigma <shigma10826@gmail.com>",
]
description = "Procedure macros for init_static"
repository = "https://github.com/shigma/init_static"
documentation = "https://docs.rs/init_static_macro"

[lib]
proc-macro = true

[[test]]
name = "input"
path = "fixtures/mod.rs"

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.108", features = ["full"] }

[dev-dependencies]
init_static = { path = "../init_static" }
macro_expand = "0.1.2"
pretty_assertions = "1.4.1"
prettyplease = "0.2.37"
tokio = { version = "1.48.0", features = ["full"] }
trybuild = "1.0.113"
walkdir = "2.5.0"
